test-cases/valid/reject/array_assignment_non_array.ul
void main() {
    int i;
    i[0] = 1; // i is not an array
}
